fix: align centre the images

--- a/css/main.css
+++ b/css/main.css
@@ -1822,9 +1822,9 @@ input[type=email],input[type=text],input[type=url] {
 }
 
 .align-center img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  display: block!important;
+  margin-left: auto!important;
+  margin-right: auto!important;
 }
 
 .alt-image-tag {
